[gd_scene load_steps=6 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui.tscn" id="2"]

[sub_resource type="Curve2D" id="curve_1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 50, 100, 0, 0, 0, 0, 300, 100, 0, 0, 0, 0, 300, 400, 0, 0, 0, 0, 600, 400, 0, 0, 0, 0, 600, 200, 0, 0, 0, 0, 750, 200)
}

[sub_resource type="CircleShape2D" id="circle_1"]
radius = 30.0

[sub_resource type="Environment" id="environment_1"]
background_mode = 3
background_color = Color(0.15, 0.15, 0.2, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("environment_1")

[node name="Background" type="Polygon2D" parent="."]
color = Color(0.18, 0.25, 0.22, 1)
polygon = PackedVector2Array(0, 0, 800, 0, 800, 600, 0, 600)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("curve_1")

[node name="PathLine" type="Line2D" parent="Path2D"]
points = PackedVector2Array(50, 100, 300, 100, 300, 400, 600, 400, 600, 200, 750, 200)
width = 50.0
default_color = Color(0.25, 0.25, 0.28, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="PathBorder1" type="Line2D" parent="Path2D"]
points = PackedVector2Array(50, 75, 300, 75, 325, 100, 325, 400, 600, 400, 600, 175, 750, 175)
width = 2.0
default_color = Color(0.15, 0.15, 0.18, 0.6)

[node name="PathBorder2" type="Line2D" parent="Path2D"]
points = PackedVector2Array(50, 125, 275, 125, 275, 400, 600, 400, 600, 225, 750, 225)
width = 2.0
default_color = Color(0.15, 0.15, 0.18, 0.6)

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(50, 100)

[node name="SpawnBase" type="Polygon2D" parent="SpawnPoint"]
color = Color(0.2, 0.5, 0.3, 0.8)
polygon = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)

[node name="SpawnInner" type="Polygon2D" parent="SpawnPoint"]
color = Color(0.3, 0.7, 0.4, 0.9)
polygon = PackedVector2Array(-28, -28, 28, -28, 28, 28, -28, 28)

[node name="SpawnArrow" type="Polygon2D" parent="SpawnPoint"]
color = Color(0.5, 0.9, 0.6, 1)
polygon = PackedVector2Array(0, -15, -12, 5, -5, 5, -5, 15, 5, 15, 5, 5, 12, 5)

[node name="SpawnGlow" type="Polygon2D" parent="SpawnPoint"]
modulate = Color(0.5, 1, 0.6, 0.3)
color = Color(1, 1, 1, 0.5)
polygon = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)

[node name="EndPoint" type="Marker2D" parent="."]
position = Vector2(750, 200)

[node name="EndBase" type="Polygon2D" parent="EndPoint"]
color = Color(0.5, 0.2, 0.2, 0.8)
polygon = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)

[node name="EndInner" type="Polygon2D" parent="EndPoint"]
color = Color(0.7, 0.3, 0.3, 0.9)
polygon = PackedVector2Array(-28, -28, 28, -28, 28, 28, -28, 28)

[node name="EndCross1" type="Polygon2D" parent="EndPoint"]
color = Color(0.9, 0.5, 0.5, 1)
polygon = PackedVector2Array(-3, -18, 3, -18, 3, 18, -3, 18)

[node name="EndCross2" type="Polygon2D" parent="EndPoint"]
color = Color(0.9, 0.5, 0.5, 1)
polygon = PackedVector2Array(-18, -3, 18, -3, 18, 3, -18, 3)

[node name="EndGlow" type="Polygon2D" parent="EndPoint"]
modulate = Color(1, 0.5, 0.5, 0.3)
color = Color(1, 1, 1, 0.5)
polygon = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)

[node name="Towers" type="Node2D" parent="."]

[node name="TowerSlots" type="Node2D" parent="."]

[node name="Slot1" type="Area2D" parent="TowerSlots"]
position = Vector2(150, 200)

[node name="Sprite2D" type="Polygon2D" parent="TowerSlots/Slot1"]
color = Color(0.4, 0.6, 0.4, 0.6)
polygon = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)

[node name="Indicator" type="Polygon2D" parent="TowerSlots/Slot1"]
modulate = Color(1, 1, 1, 0.3)
color = Color(0.7, 0.9, 0.7, 0.8)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerSlots/Slot1"]
shape = SubResource("circle_1")

[node name="Slot2" type="Area2D" parent="TowerSlots"]
position = Vector2(400, 250)

[node name="Sprite2D" type="Polygon2D" parent="TowerSlots/Slot2"]
color = Color(0.4, 0.6, 0.4, 0.6)
polygon = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)

[node name="Indicator" type="Polygon2D" parent="TowerSlots/Slot2"]
modulate = Color(1, 1, 1, 0.3)
color = Color(0.7, 0.9, 0.7, 0.8)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerSlots/Slot2"]
shape = SubResource("circle_1")

[node name="Slot3" type="Area2D" parent="TowerSlots"]
position = Vector2(200, 480)

[node name="Sprite2D" type="Polygon2D" parent="TowerSlots/Slot3"]
color = Color(0.4, 0.6, 0.4, 0.6)
polygon = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)

[node name="Indicator" type="Polygon2D" parent="TowerSlots/Slot3"]
modulate = Color(1, 1, 1, 0.3)
color = Color(0.7, 0.9, 0.7, 0.8)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerSlots/Slot3"]
shape = SubResource("circle_1")

[node name="Slot4" type="Area2D" parent="TowerSlots"]
position = Vector2(480, 480)

[node name="Sprite2D" type="Polygon2D" parent="TowerSlots/Slot4"]
color = Color(0.4, 0.6, 0.4, 0.6)
polygon = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)

[node name="Indicator" type="Polygon2D" parent="TowerSlots/Slot4"]
modulate = Color(1, 1, 1, 0.3)
color = Color(0.7, 0.9, 0.7, 0.8)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerSlots/Slot4"]
shape = SubResource("circle_1")

[node name="Slot5" type="Area2D" parent="TowerSlots"]
position = Vector2(680, 300)

[node name="Sprite2D" type="Polygon2D" parent="TowerSlots/Slot5"]
color = Color(0.4, 0.6, 0.4, 0.6)
polygon = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)

[node name="Indicator" type="Polygon2D" parent="TowerSlots/Slot5"]
modulate = Color(1, 1, 1, 0.3)
color = Color(0.7, 0.9, 0.7, 0.8)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerSlots/Slot5"]
shape = SubResource("circle_1")

[node name="Slot6" type="Area2D" parent="TowerSlots"]
position = Vector2(680, 100)

[node name="Sprite2D" type="Polygon2D" parent="TowerSlots/Slot6"]
color = Color(0.4, 0.6, 0.4, 0.6)
polygon = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)

[node name="Indicator" type="Polygon2D" parent="TowerSlots/Slot6"]
modulate = Color(1, 1, 1, 0.3)
color = Color(0.7, 0.9, 0.7, 0.8)
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerSlots/Slot6"]
shape = SubResource("circle_1")

[node name="UI" parent="." instance=ExtResource("2")]
